tests/sksl/errors/golden/BitShiftFloatVector.glsl

void main() {
    vec2 x = vec2(6.0);
    x >>= 1.0;
}
